--- a/_data/cv/fr.yaml
+++ b/_data/cv/fr.yaml
@@ -111,17 +111,17 @@ tab2:
 tab3:
   header: Formation
   content:
-    - date: 2015 - aujourd'hui
+    - date: aujourd'hui - 2015
       title: Doctorat en robotique humanoïde (Lirmm)
-      text: Carapace haptique compliante pour robots humanoïdes et stratégies de chutes sécurisées en présence humaine
-    - date: 2013 - 2014
+      text: Commande de chute pour robots humanoïdes par reconfiguration posturale et compliance adaptative
+    - date: 2014 - 2013
       title: Master 2 en robotique (ENSAM Paris)
       text: Master de Robotique « Systèmes Avancés et Robotique » en cohabilitation avec l’UPMC, l’ENSTA et l’ENS Cachan
-    - date: 2008 - 2013
+    - date: 2013 - 2008
       title: Ingénieur « Génie Mécanique et Conception » (INSA Lyon)
       text: >
               Département génie mécanique.
               Classes préparatoires intégrées – section « ASINSA » en relation avec l’Asie
-    - date: 2011 - 2012
+    - date: 2012 - 2011
       title: Année d'échanges (神戸大学)
       text: Année effectué au départment mécanique de l'université de Kobe
